--- a/force-app/main/default/pages/Appointments.page
+++ b/force-app/main/default/pages/Appointments.page
@@ -4,21 +4,25 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title> Appointments </title>
-        <apex:slds />
+        <apex:slds/>
     </head>
     <body>
-    <apex:messages />
+    <apex:messages/>
     <apex:pageBlock title="Appointments Table">
 
-        <apex:form >
-            <span>Select a Doctor: </span>
+        <apex:form>
             <apex:selectList size="1" value="{!selectedDoctorId}" multiselect="false">
-                <apex:selectOptions value="{!doctorOptionList}"></apex:selectOptions>
+                <apex:selectOptions value="{!doctorOptionList}">Select a Doctor:</apex:selectOptions>
                 <apex:actionSupport reRender="selected_doctor,selected_doctorAppointments" event="onchange"/>
             </apex:selectList>
         </apex:form>
+        <apex:form>
+            <apex:selectList size="1" value="{!selectedPatientId}" multiselect="false">
+                <apex:selectOptions value="{!patientOptionList}">Select a Patient:</apex:selectOptions>
+                <apex:actionSupport reRender="selected_doctorAppointments" event="onchange"/>
+            </apex:selectList>
+        </apex:form>
         <apex:pageBlockSection id="selected_doctor">
-
             <apex:outputText value="{0, time, short}" label=" Working Hours Start:">
                 <apex:param value="{! workingHoursStart }"/>
             </apex:outputText>
@@ -29,13 +33,7 @@
             </apex:outputText>
 
         </apex:pageBlockSection>
-        <apex:form >
-            <span>Select a Patient: </span>
-            <apex:selectList size="1" value="{!selectedPatientId}" multiselect="false">
-                <apex:selectOptions value="{!patientOptionList}"></apex:selectOptions>
-                <apex:actionSupport reRender="selected_doctorAppointments" event="onchange"></apex:actionSupport>
-            </apex:selectList>
-        </apex:form>
+
         <br/>
 
 
@@ -45,39 +43,100 @@
         <button onclick="document.location='https://vrpconsulting-f1-dev-ed.lightning.force.com/lightning/o/Patient__c/new'">
             Add new Patient
         </button>
-        <apex:form >
-            <apex:pageBlockSection columns="1">
-                <apex:inputField value="{!newAppointment.Appointment_Date__c}"/>
-                <apex:inputField value="{!newAppointment.Duration_in_minutes__c}"/>
-                <apex:commandButton action="{!saveAppointment}" value="Add New Appointment"/>
-                <apex:actionSupport reRender="selected_doctorAppointments" event="onclick"/>
-            </apex:pageBlockSection>
-        </apex:form>
-        <apex:form id="selected_doctorAppointments">
-            <apex:pageBlockTable value="{!appointments}" var="appointment">
-                <apex:column headerValue="Action">
-                    <apex:outputLink value="{! URLFOR($Action.Appointment__c.View, appointment.Id) }">
-                        View
-                    </apex:outputLink>
-                    &nbsp;
-                </apex:column>
-                <apex:column value="{!appointment.Doctor__c}"/>
-                <apex:column value="{!appointment.Patient__c}"/>
-                <apex:column value="{!appointment.Appointment_Date__c}"/>
-                <apex:column headerValue="Duration" value="{!FLOOR(appointment.Duration_in_minutes__c)} minutes"/>
-            </apex:pageBlockTable>
+        <apex:form>
+            <!--            <apex:pageBlockSection columns="1">-->
+            <!--                <apex:inputField value="{!newAppointment.Appointment_Date__c}"/>-->
+            <!--                <apex:inputField value="{!newAppointment.Duration_in_minutes__c}"/>-->
+            <!--                <apex:commandButton action="{!saveAppointment}" value="Add New Appointment"/>-->
+            <!--                <apex:actionSupport reRender="selected_doctorAppointments" event="onclick"/>-->
+            <!--            </apex:pageBlockSection>-->
+            <!--        </apex:form>-->
+            <!--        <apex:form id="selected_doctorAppointments">-->
+            <!--            <apex:pageBlockTable value="{!appointments}" var="appointment">-->
+            <!--                <apex:column headerValue="Action">-->
+            <!--                    <apex:outputLink value="{! URLFOR($Action.Appointment__c.View, appointment.Id) }">-->
+            <!--                        View-->
+            <!--                    </apex:outputLink>-->
+            <!--                    &nbsp;-->
+            <!--                </apex:column>-->
+            <!--                <apex:column value="{!appointment.Doctor__c}"/>-->
+            <!--                <apex:column value="{!appointment.Patient__c}"/>-->
+            <!--                <apex:column value="{!appointment.Appointment_Date__c}"/>-->
+            <!--                <apex:column headerValue="Duration" value="{!FLOOR(appointment.Duration_in_minutes__c)} minutes"/>-->
+            <!--            </apex:pageBlockTable>-->
 
 
-            <apex:commandButton status="fetchStatus" reRender="selected_doctorAppointments" value="Previous"
-                                action="{!setCon.previous}" title="Previous Page"/>
+            <!--            <apex:commandButton status="fetchStatus" reRender="selected_doctorAppointments" value="Previous"-->
+            <!--                                action="{!setCon.previous}" title="Previous Page"/>-->
 
-            <apex:outputText >{!setCon.pageNumber}/{!CEILING(countOfRecords/sizeOfPage)}</apex:outputText>
-
-
-            <apex:commandButton status="fetchStatus" reRender="selected_doctorAppointments" value="Next"
-                                action="{!setCon.next}" title="Next Page"/>
+            <!--            <apex:outputText>{!setCon.pageNumber}/{!CEILING(countOfRecords/sizeOfPage)}</apex:outputText>-->
 
 
+            <!--            <apex:commandButton status="fetchStatus" reRender="selected_doctorAppointments" value="Next"-->
+            <!--                                action="{!setCon.next}" title="Next Page"/>-->
+
+
+            <apex:outputPanel layout="block" id="selected_doctorAppointments">
+
+                <table id="AppointmentsTable">
+                    <tr>
+                        <th>Action</th>
+                        <th>Doctor</th>
+                        <th>Patient</th>
+                        <th>Date Of Appointment</th>
+                        <th>Duration</th>
+                    </tr>
+                    <apex:repeat value="{!appointments}" var="appointment">
+                        <tr>
+                            <td>
+                                <apex:outputLink value="{! URLFOR($Action.Appointment__c.View, appointment.Id) }">
+                                    View
+                                </apex:outputLink>
+                                |
+                                <apex:outputLink value="{! URLFOR($Action.Appointment__c.Edit, appointment.Id) }">
+                                    Edit
+                                </apex:outputLink>
+                                |
+                                <apex:outputLink value="{! URLFOR($Action.Appointment__c.Delete, appointment.Id) }">
+                                    Delete
+                                </apex:outputLink>
+
+                            </td>
+                            <td>
+                                <apex:outputField value="{!appointment.Doctor__c}"/>
+                            </td>
+                            <td>
+                                <apex:outputField value="{!appointment.Patient__c}"/>
+                            </td>
+                            <td>
+                                <apex:outputField value="{!appointment.Appointment_Date__c}"/>
+                            </td>
+                            <td>
+                                <apex:outputField value="{!appointment.Duration_in_minutes__c}"/>
+                            </td>
+                        </tr>
+                    </apex:repeat>
+                </table>
+                <apex:commandButton action="{!setCon.first}" status="PaginationStatus"
+                                    reRender="selected_doctorAppointments" value="|<"
+                                    disabled="{!!setCon.hasPrevious}" title="First Page"/>
+                <apex:commandButton action="{!setCon.previous}" status="PaginationStatus"
+                                    reRender="selected_doctorAppointments" value="<"
+                                    disabled="{!!setCon.hasPrevious}" title="Previous Page"/>
+                <apex:outputText> {!(setCon.pageNumber * sizeOfPage)+1-sizeOfPage}
+                    -{!IF((setCon.pageNumber * sizeOfPage)>countOfRecords, countOfRecords,(setCon.pageNumber * sizeOfPage))}
+                    of {!countOfRecords}</apex:outputText>
+                <apex:commandButton action="{!setCon.next}" status="PaginationStatus"
+                                    reRender="selected_doctorAppointments" value=">" disabled="{!!setCon.hasNext}"
+                                    title="Next Page"/>
+                <apex:commandButton action="{!setCon.last}" status="PaginationStatus"
+                                    reRender="selected_doctorAppointments" value=">|" disabled="{!!setCon.hasNext}"
+                                    title="Last Page"/>
+
+                <apex:actionStatus id="PaginationStatus">
+                    <apex:facet name="start"><img src="/img/loading.gif" alt=""/></apex:facet>
+                </apex:actionStatus>
+            </apex:outputPanel>
         </apex:form>
 
     </apex:pageBlock>
