--- a/force-app/main/default/pages/DoctorView.page
+++ b/force-app/main/default/pages/DoctorView.page
@@ -1,3 +1,3 @@
 <apex:page standardController="Doctors__c">
-    <apex:detail subject="{!doctors__c.Id}" relatedList="false" title="false"/>
+    <apex:detail subject="{!Doctors__c.Id}" relatedList="false" title="false"/>
 </apex:page>
